--- a/src/assets/Reading.css
+++ b/src/assets/Reading.css
@@ -124,8 +124,8 @@
   }
   
   .reading-logo img {
-    width: 10rem;
-    height: 10rem;
+    width: 12rem;
+    height: 12rem;
     margin-bottom: 0.5rem;
   }
   
@@ -176,8 +176,8 @@
     
     
       .reading-logo img {
-        width: 8rem;
-        height: 8rem;
+        width: 9rem;
+        height: 9rem;
       }
     
       .reading-logo p {
